[package]
name = "prometheus-mosquitto-exporter"
version = "0.1.0-20211221"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = "0.6"
getopts = "0.2"
log = "0.4"
paho-mqtt = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple-error = "0.2"

